feat: 修改项目标题图标

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li>
           <div class="detail">
             <div class="detail__projects">
-              <h3>制造执行系统（MES）的设计与研发</h3>
+              <h3><img src="src/images/flower.svg">制造执行系统（MES）的设计与研发</h3>
               <span><time>2020年12月</time>~<time>2022年12月</time></span>
             </div>
             <p>
@@ -110,10 +110,10 @@
 
           </div>
         </li>
-        <li style="page-break-before: always">
+        <li>
           <div class="detail">
             <div class="detail__projects">
-              <h3>智能仪器仪表网络协同制造集成平台研发与应用示范</h3>
+              <h3><img src="src/images/flower.svg">智能仪器仪表网络协同制造集成平台研发与应用示范</h3>
               <span><time>2020年11月</time>~<time>2023年10月</time></span>
             </div>
             <p>该项目是<strong>国家重点研发计划项目</strong>，所属专项是网络协同制造和智能工厂项目，牵头承担单位是北京生产力促进中心。智能仪器仪表网络协同制造集成平台预览地址:
@@ -131,10 +131,10 @@
             </p>
           </div>
         </li>
-        <li>
+        <li style="page-break-before: always">
           <div class="detail">
             <div class="detail__projects">
-              <h3>北京远东仪表选型软件系统</h3>
+              <h3><img src="src/images/flower.svg">北京远东仪表选型软件系统</h3>
               <span><time>2023年9月</time>~<time>至今</time></span>
             </div>
             <p>
@@ -156,7 +156,7 @@
         <li>
           <div class="detail">
             <div class="detail__open-source">
-              <h3>随心记账</h3>
+              <h3><img src="src/images/cerebrospinal-fluid.svg">随心记账</h3>
               <span>
                 <a href="https://github.com/JonieFu/morney">源码链接</a>
                 <a href="https://joniefu.gitee.io/complete-morney/#/money">项目预览</a>
@@ -178,7 +178,7 @@
         <li>
           <div class="detail">
             <div class="detail__open-source">
-              <h3>前端导航</h3>
+              <h3><img src="src/images/cerebrospinal-fluid.svg">前端导航</h3>
               <span>
                 <a href="https://github.com/JonieFu/nav/tree/master/src">源码链接</a>
                 <a href="http://joniefu.gitee.io/nav/src/">项目预览</a>
@@ -197,15 +197,12 @@
         <li>
           <div class="detail">
             <div class="detail__open-source">
-              <h3>会动的维尼</h3>
+              <h3><img src="src/images/cerebrospinal-fluid.svg">会动的维尼</h3>
               <span>
                 <a href="https://github.com/JonieFu/Winnie">源码链接</a>
                 <a href="https://joniefu.github.io/Winnie/src/">项目预览</a>
               </span>
             </div>
-            <p>
-              在学习了 CSS3 布局与定位、JS DOM 操作后，具备一定的网页模仿能力。
-            </p>
             <p>
               通过设置定时器，动态展示代码并绘制Winnie。
             </p>
@@ -221,7 +218,7 @@
         <li>
           <div class="detail">
             <div class="detail__open-source">
-              <h3>Canvas画板</h3>
+              <h3><img src="src/images/cerebrospinal-fluid.svg">Canvas画板</h3>
               <span>
                 <a href="https://github.com/JonieFu/canvas">源码链接</a>
                 <a href="http://joniefu.gitee.io/canvas/">项目预览</a>
@@ -238,7 +235,7 @@
       </ul>
     </section>
 
-    <section class="section article__blogs" style="page-break-before: always">
+    <section class="section article__blogs">
       <h2>技术博客</h2>
       <hr />
       <p>目前已有技术文章10+篇</p>
@@ -274,32 +271,6 @@
         </li>
       </ul>
     </section>
-    <section class="section article__volunteer">
-      <h2>志愿者经历</h2>
-      <hr />
-      <div class="detail">
-        <div class="detail__projects">
-          <h3>北控集团青年志愿者服务队</h3>
-          <ul><li>
-            参加为在党50年的老党员送上纪念章活动。
-          </li></ul>
-        </div>
-        <div class="detail__projects">
-          <h3>京仪集团青年志愿者服务队</h3>
-          <ul><li>
-            参加弘扬优秀传统文化支援服务活动。
-          </li></ul>
-        </div>
-        <div class="detail__projects">
-          <h3>永康公寓社区青年汇志愿服务队</h3>
-          <ul>
-            <li>
-              参加礼让斑马线主题活动。
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
     <section class="section article__bio">
       <h2>个人信息</h2>
       <hr />
@@ -316,12 +287,9 @@
               主要参与者.</li>
             <li>[2] 付玉, 李敏, 王帆, 等. 满文单词罗马转写智能算法设计[J]. 大连民族大学学报, 2018, 20(1): 69-72.</li>
             <li>[3] 付玉, 王帆. 嵌入式手写满文信息查询系统电路设计与实现[J]. 信息技术与信息化, 2017 (4): 61-64.</li>
-            <li>[4] Li M, Zheng R, Xu S, Fu Y,et al. Manchu word recognition based on convolutional neural network with
+            <li>[4] Li M, Zheng R, Xu S, Fu Y, et al. Manchu word recognition based on convolutional neural network with
               spatial pyramid pooling[C]//2018 11th International Congress on Image and Signal Processing, BioMedical
-              Engineering and Informatics (CISP-BMEI). IEEE, 2018: 1-6.Li M, Zheng R, Xu S, et al. Manchu word
-              recognition based on convolutional neural network with spatial pyramid pooling[C]//2018 11th International
-              Congress on Image and Signal Processing, BioMedical Engineering and Informatics (CISP-BMEI). IEEE, 2018:
-              1-6.</li>
+              Engineering and Informatics (CISP-BMEI). IEEE, 2018: 1-6.</li>
           </ul>
         </li>
       </ul>
